gospel/tests/negative/t3.mli

(*@ function f (x:float): bool = x = 2 *)

(* ERROR Type mismatch float and integer *)
